--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
     <script src="client.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Bonus Calculator Object Challenge</h1>
+    <header>
+      <h1>Bonus Calculator Object Challenge</h1>
+    </header>
+    <div id="main">
+      <div>
+        <h2>Bonuses</h2>
+        <div class="wrapper">
+          <div>
+            <h4>Department One</h4>
+            <h3 ></h3>
+            <button onclick="calculateBonus(employees);">Group One Calculator</button>
+            <ul class="bonus-data"></ul>
+          </div>
+        </div>  
+    </div>
+    <script src=""
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
   </body>
 </html>
